Updated exporting to use local files stored on the user

--- a/terracotta/client/static/main.css
+++ b/terracotta/client/static/main.css
@@ -173,6 +173,8 @@ img.header {
 
 #key-list {
   padding-left: 0px;
+  max-height: 400px;
+  max-width: 400px !important;
 }
 
 #singleband-value-lower {
