Fixed GeoTiffs appearing as white boxes, re-added color map selection for each band

--- a/terracotta/client/static/css/main.css
+++ b/terracotta/client/static/css/main.css
@@ -70,6 +70,9 @@ img.header {
 }
 #top-controls {
   margin-bottom: 20px;
+}
+#colormap-selector,
+#top-controls {
   width: 400px !important;
 }
 .input__text--upper {
