--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -1,41 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>Glacies Indicium</title>
+    <title>Glacies Indicium</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="google-signin-client_id"
-      content="975982665680-97lcqjf10qv490i6424p0slg93gl3qv4.apps.googleusercontent.com"
-    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto"
     />
-
     <link
       rel="shortcut icon"
       href="{{ url_for('static', filename='favicon.ico') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='leaflet.css') }}"
+      href="{{ url_for('static', filename='css/leaflet.css') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='nouislider.min.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='main.css') }}"
+      href="{{ url_for('static', filename='css/main.css') }}"
     />
     <link
       href="{{ url_for('static', filename='css/font-awesome.min.css') }}"
       rel="stylesheet"
     />
     <link
-      href="{{ url_for('static', filename='halfmoon-variables.min.css') }}"
+      href="{{ url_for('static', filename='css/halfmoon-variables.min.css') }}"
       rel="stylesheet"
     />
     <script
@@ -43,12 +34,11 @@
       integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
       crossorigin=""
     ></script>
+    <script src="{{ url_for('static', filename='js/BoundaryCanvas.js')}}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="{{ url_for('static', filename='nouislider.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='main.js') }}"></script>
-    <script src="{{ url_for('static', filename='proj4.js')}}"></script>
-    <script src="{{ url_for('static', filename='proj4leaflet.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script src="{{ url_for('static', filename='js/halfmoon.js') }}"></script>
   </head>
   <body data-set-preferred-mode-onload="true">
     <div id="controls" class="container-fluid list overflow-y-scroll">
@@ -131,6 +121,14 @@
         <div id="key-list"></div>
       </div>
       <hr />
+      <div>
+        <select
+          id="colormap-selector"
+          class="form-control"
+          onchange="updateColormap();"
+        ></select>
+      </div>
+      <hr />
       <div class="el-wrapper border-none mb-10 p-5" id="regionList">
         <h2 class="content-title d-inline-block">Region Keys</h2>
         <a
@@ -193,8 +191,6 @@
     <aside class="error-container">
       <ul id="errors"></ul>
     </aside>
-
-    <script src="{{ url_for('static', filename='halfmoon.js') }}"></script>
     <script type="text/javascript">
       window.onload = initializeApp.bind(null, '{{ hostname }}');
     </script>
