Updated dependencies to be stored locally. Updated User interface layout and updated icon/leaflet libraries to be latest

--- a/terracotta/client/static/css/main.css
+++ b/terracotta/client/static/css/main.css
@@ -59,8 +59,9 @@ input[type='text'] {
 img.header {
   width: 100%;
   min-width: 250px;
-  max-width: 350px;
+  max-width: 325px;
   margin-bottom: 15px;
+  display: inline-block;
 }
 
 #map {
@@ -398,4 +399,8 @@ ul#errors {
 .noUi-handle,
 .singleband-slider[disabled] .noUi-handle {
   background-color: #838383;
+}
+
+.fa-info-circle {
+  color: var(--primary-color);
 }
