--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -2,39 +2,18 @@
 <html>
   <head>
     <title>Glacies Indicium</title>
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto"
-    />
-    <link
-      rel="shortcut icon"
-      href="{{ url_for('static', filename='favicon.ico') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/leaflet.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/main.css') }}"
-    />
-    <link
-      href="{{ url_for('static', filename='css/font-awesome.min.css') }}"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/leaflet.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+    <link href="{{ url_for('static', filename='css/all.min.css') }}" rel="stylesheet" />
     <link
       href="{{ url_for('static', filename='css/halfmoon-variables.min.css') }}"
       rel="stylesheet"
     />
-    <script
-      src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-      integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-      crossorigin=""
-    ></script>
-    <script src="{{ url_for('static', filename='js/BoundaryCanvas.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/leaflet.js')}}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
@@ -43,50 +22,22 @@
   <body data-set-preferred-mode-onload="true">
     <div id="controls" class="container-fluid list overflow-y-scroll">
       <div id="top-controls" class="d-flex d-flex justify-content-end">
-        <div class="modal" id="preferencesModule" tabindex="-1" role="dialog">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <a href="#" class="close" role="button" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </a>
-              <h5 class="modal-title">Preferences</h5>
-              <div class="custom-switch">
-                <input
-                  type="checkbox"
-                  id="darkmode-pref"
-                  onclick="halfmoon.toggleDarkMode()"
-                  value=""
-                  checked
-                />
-                <label for="darkmode-pref">Dark mode</label>
-              </div>
-              <div class="text-right mt-20">
-                <!-- text-right = text-align: right, mt-20 = margin-top: 2rem (20px) -->
-                <a href="#" class="btn mr-5" role="button">Close</a>
-                <a href="#" class="btn btn-success" role="button"
-                  >Save Preferences</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--Container for dark mode toggle-->
-        <div class="custom-switch ml-20">
+        <img
+          src="{{ url_for('static', filename='images/header_large.png') }}"
+          class="header"
+          id="header-one"
+        />
+        <div class="custom-switch ml-20 mt-20">
           <button
             class="btn btn-action"
             type="button"
-            onclick="halfmoon.toggleDarkMode()"
+            onclick="toggleDarkMode();"
             aria-label="Toggle dark mode"
           >
-            <i class="fa fa-moon-o" aria-hidden="true"></i>
+            <i class="far fa-moon" aria-hidden="true" id="viewModeIcon"></i>
           </button>
         </div>
       </div>
-      <img
-        src="{{ url_for('static', filename='images/header_large.png') }}"
-        class="header"
-        id="header-one"
-      />
       <div class="el-wrapper border-none">
         <div
           id="details__container"
@@ -99,17 +50,17 @@
         </div>
         <div id="details__content">
           <p class="clear" id="info-text">Glacies Indicium capstone project!</p>
+          <p id="details__host--title">
+            <b>host: </b> <span id="details__host--url">{{ hostname }}</span>
+          </p>
         </div>
-        <p id="details__host--title">
-          <b>host: </b> <span id="details__host--url">{{ hostname }}</span>
-        </p>
       </div>
       <hr />
 
       <div id="widget"></div>
 
       <div class="form-group">
-        <label>Band Keys</label>
+        <h2 class="content-title d-inline-block">Band Keys</h2>
         <div id="key-list"></div>
       </div>
       <hr />
@@ -124,8 +75,8 @@
       <div class="el-wrapper border-none mb-10 p-5" id="regionList">
         <h2 class="content-title d-inline-block">Region Keys</h2>
         <a
-          class="btn btn-primary d-inline-block ml-10"
-          id="exportButton"
+          class="btn btn-primary d-none ml-10"
+          id="export-button"
           target="_blank"
           download
           role="button"
