--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -18,6 +18,12 @@
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="{{ url_for('static', filename='js/halfmoon.js') }}"></script>
+    <!--
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>-->
   </head>
   <body data-set-preferred-mode-onload="true">
     <div id="controls" class="container-fluid list overflow-y-scroll">
@@ -74,6 +80,12 @@
       <hr />
       <div class="el-wrapper border-none mb-10 p-5" id="regionList">
         <h2 class="content-title">Region Keys</h2>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Search for a region"
+          onkeyup="filterRegions(this)"
+        />
         <div class="d-inline-flex justify-content-around mb-20">
           <a
             class="btn btn-primary btn-sm d-none mr-10"
@@ -98,35 +110,6 @@
         <div id="thumbnail-holder"></div>
         <div class="scrolling-list overflow-y-scroll" id="search-results"></div>
       </div>
-      <!--
-      <div class="d-flex justify-content-start" id="search-result-controls">
-        <ul class="pagination">
-          <li class="page-item">
-            <a
-              class="page-link"
-              id="prev-page"
-              onclick="incrementResultsPage(-1);"
-            >
-              <i class="fa fa-angle-left" aria-hidden="true"></i>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-          <li class="page-item active">
-            <a class="page-link" id="page-counter">1</a>
-          </li>
-          <li class="page-item">
-            <a
-              class="page-link"
-              id="next-page"
-              onclick="incrementResultsPage(1);"
-            >
-              <i class="fa fa-angle-right" aria-hidden="true"></i>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-      </div>-->
-
       <div id="loader__container">
         <div id="loader__spinner--control" class="loader__spinner"></div>
       </div>
