--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -15,15 +15,9 @@
     />
     <script src="{{ url_for('static', filename='js/leaflet.js')}}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="{{ url_for('static', filename='js/halfmoon.js') }}"></script>
-    <!--
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
   </head>
   <body data-set-preferred-mode-onload="true">
     <div id="controls" class="container-fluid list overflow-y-scroll">
@@ -68,25 +62,60 @@
       <div class="form-group">
         <h2 class="content-title d-inline-block">Band Keys</h2>
         <div id="key-list"></div>
+        <div class="dropdown" id="band-dropdown-container">
+          <button
+            class="btn dropdown-btn"
+            data-toggle="dropdown"
+            type="button"
+            id="dropdown-toggle-1"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Select Band <i class="fa fa-angle-down ml-5" aria-hidden="true"></i>
+          </button>
+          <div
+            class="dropdown-menu"
+            id="band-dropdown-menu"
+            aria-labelledby="dropdown-toggle-btn-1"
+          ></div>
+        </div>
       </div>
       <hr />
       <div>
-        <select
+        <h2 class="content-title d-inline-block">Colormap</h2>
+        <div class="dropdown" id="colormap-dropdown-container">
+          <button
+            class="btn dropdown-btn"
+            data-toggle="dropdown"
+            type="button"
+            id="dropdown-toggle-2"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Select Colormap <i class="fa fa-angle-down ml-5" aria-hidden="true"></i>
+          </button>
+          <div
+          class="dropdown-menu"
           id="colormap-selector"
-          class="form-control"
-          onchange="updateColormap();"
-        ></select>
+          aria-labelledby="dropdown-toggle-btn-1"
+        ></div>
       </div>
       <hr />
-      <div class="el-wrapper border-none mb-10 p-5" id="regionList">
+      <div class="el-wrapper border-none mb-10" id="regionList">
         <h2 class="content-title">Region Keys</h2>
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Search for a region"
-          onkeyup="filterRegions(this)"
-        />
-        <div class="d-inline-flex justify-content-around mb-20">
+        <div class="input-group" id="search-group">
+          <span>
+            <i class="fas fa-search" id="search-icon" aria-hidden="true"></i>
+          </span>
+          <input
+            id="search-input"
+            type="text"
+            class="form-control"
+            placeholder="Search for a region"
+            onkeyup="filterRegions(this)"
+          />
+        </div>
+        <div class="d-inline-flex justify-content-around mb-20 mt-5">
           <a
             class="btn btn-primary btn-sm d-none mr-10"
             id="export-button"
@@ -95,7 +124,6 @@
             role="button"
           >
             Download Layer
-            <i class="fa fa-download" aria-hidden="true"></i>
           </a>
           <button
             class="btn btn-danger btn-sm d-none"
@@ -104,11 +132,10 @@
             onclick="resetLayerState(true)"
           >
             Reset Map
-            <i class="fa fa-undo" aria-hidden="true"></i>
           </button>
         </div>
         <div id="thumbnail-holder"></div>
-        <div class="scrolling-list overflow-y-scroll" id="search-results"></div>
+        <div class="scrolling-list overflow-y-auto" id="search-results"></div>
       </div>
       <div id="loader__container">
         <div id="loader__spinner--control" class="loader__spinner"></div>
