Updated user interface with sidebar to improve mobile experience

--- a/TeamWebsite/styles/styles.css
+++ b/TeamWebsite/styles/styles.css
@@ -132,6 +132,10 @@ nav {
   text-align: center;
 }
 
+.image-caption strong {
+  font-family: 'worksans-r', serif !important;
+}
+
 .padding-top-md {
   padding-top: 2em;
 }
