Updated team website to fix jQuery console errors and updated web app styles for mobile, changed layer info to be modal

--- a/TeamWebsite/styles/styles.css
+++ b/TeamWebsite/styles/styles.css
@@ -360,8 +360,14 @@ nav {
   #solution-mobile-header {
     display: block;
   }
+
   #solution-desktop-header {
     display: none;
+  }
+
+  .fa-check-circle,
+  .fa-lightbulb {
+    margin-left: 0rem !important;
   }
 }
 
